# dat-core

./: .gitignore  Dockerfile  README.md  alembic.ini  db_scripts.sql  pyproject.toml  requirements.txt  setup.py  utils.py
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: PULL_REQUEST_TEMPLATE.md
Executables/: main.py
Orchestrator/: main.py  worker.py
alembic_migrations/utils/: database_utils.py
alembic_migrations/versions/: 04274709cf77_drop_column_level_from_connection_run_.py  08a906b44ecb_add_run_id_column_in_connection_run_logs.py  15a8511a33ff_create_table_organizations.py  15a8511a33ff_initial_database_structure.py  1d16ab0e4012_create_table_organization_users_add_.py  252d37bbf32c_add_module_name_to_actors.py  25804ddf006a_create_table_connections.py  (+9 more)
auth/: core.py  oauth2_authenticator.py  token_authenticator.py
connectors/: base.py
db-scripts/: create_db.sql
db_models/: actors.py
pydantic_models/: DatMessage.py  configured_document_stream.py  connection.py  connector_specification.py  dat_catalog.py  dat_connection_status.py  dat_document_stream.py  dat_log_message.py  dat_message.py  stream_metadata.py
specs/: ConfiguredDocumentStream.yml  Connection.yml  ConnectorSpecification.yml  DatCatalog.yml  DatDocumentMessage.yml  DatDocumentStream.yml  DatMessage.yml  DatStateMessage.yml  StreamMetadata.yml  VectorStateMessage.yml  VectorizeCatalog.yml  VectorizeConnectionStatus.yml  VectorizeDocumentMessage.yml  VectorizeDocumentStream.yml
tests/: conftest.py  test_destinations.py  test_generators.py
(+104 files in other folders)
